# tgstarter_template

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  main.py  preparation.py  pyproject.toml  scheduler.py
models/: config.py  storage.py
settings/: config_example.yaml  content.yaml
settings/content/: __init__.py  onboarding.py
src/: main.py  preparation.py  scheduler.py
src/handlers/: __init__.py  logging.py
src/handlers/demo/: onboarding.py
src/models/: config.py  storage.py
src/settings/: config.example.yaml  config_example.yaml
src/settings/content/: onboarding.py
src/states/demo/: onboarding.py
src/utils/: constants.py  logging.py  typing.py
states/: logging.py
states/demo/: admin.py  onboarding.py
states/demo/member/: checkin.py
states/demo/member/event/: registration.py
tests/: test_tgstarter_template.py
tgstarter_template/: bot.py  config_example.yaml  preparation.py
tgstarter_template/models/: config.py
utils/: logging.py
