[tool.poetry]
name = "tgstarter_template"
version = "0.1.0"
description = ""
authors = ["eboshare <t.lila@list.ru>"]

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^1.4"
tgstarter = {git = "https://github.com/tgstarter/tgstarter", branch = "dev-2.x"}
django = "^3.0.5"
pytz = "^2019.3"
apscheduler = "^3.6.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
